--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
+    
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
@@ -34,7 +35,7 @@
                 <i class="fas fa-divide"></i>
             </button>
         </div>
-        <div class="question-are">
+        <div class="question-area">
             <span id="operand1">0</span>
             <span id="operator">x</span>
             <span id="operand2">0</span>
